--- a/Day 1/index.html
+++ b/Day 1/index.html
@@ -37,6 +37,7 @@
           font-weight: 400;
           cursor: pointer;
           border-radius: 4px;
+          align-items: center;
         "
       >
         <div
@@ -49,7 +50,7 @@
             cursor: pointer;
             border-radius: 4px;
             text-align: center;
-            margin: auto;
+            /* margin: auto; */
           "
         >
           Home
@@ -64,7 +65,7 @@
             cursor: pointer;
             border-radius: 4px;
             text-align: center;
-            margin: auto;
+            /* margin: auto; */
           "
         >
           Contact Us
@@ -194,10 +195,15 @@
       style="
         display: flex;
         flex-direction: column;
-        align-items: center; /* centers teh Sign Up Button*/
+        justify-content: cen;
+        background-color: rgb(241, 237, 182);
         gap: 100px;
+        height: 1000px;
+        padding: 30px;
+        /* align-items: center; */
       "
     >
+      <!-- contents - signup, subheading, signup -->
       <div
         style="
           font-weight: 900px;
@@ -253,6 +259,7 @@
         /* flex-direction: column; */
         justify-content: center;
         margin-top: 30px;
+        background-color: rgb(247, 175, 225);
       "
     >
       <div
